--- a/WebContent/css/resume.css
+++ b/WebContent/css/resume.css
@@ -45,7 +45,8 @@ ul.affixedLinks {
 	margin-top:0px;
 	position:fixed;
 	background-color:#fff;
-	width:100%;
+	border-bottom-right-radius: 10px;
+	border-bottom-left-radius: 10px;
 	padding:10px 0px 10px 0px;
 	border-bottom: solid 1px grey;
 }
